[package]
name = "raindropdog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.14.0"
glib = "0.14.2"
gio = "0.14.0"
futures = "0.3"
base64 = "0.13.0"
surf = "2.1.0"
serde_json = "1.0"
lazy_static = "1.4.0"
